Linting, removal of dead and unused code.